--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <style type="text/css">
     body { margin: 0; padding: 0; }
     #field {
-      width: 100%;
-      height: 100%;
       background: url('centimeter.png');
-      opacity: 0.5;
+      opacity: 0.3;
     }
     #romo {
       position: fixed;
@@ -20,7 +18,7 @@
   </style>
 </head>
 <body>
-  <canvas id="field"></canvas>
+  <canvas id="field" width="960" height="640"></canvas>
   <img src="romo.png" id="romo" />
 </body>
 </html>
